jasn/examples/invalid/unclosed_array.jasn
// Unclosed array
{
  bad: [1, 2, 3
}
